--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ body {
 }
 
 main {
-    max-width: 1200px;
+    max-width: 600px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
+    padding: 20px;
 }
 
 label {
